--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ KICAD/TonUINOv4.kicad_pcb-bak
 KICAD/TonUINOv4.pro
 KICAD/TonUINOv4.sch
 KICAD/TonUINOv4.sch-bak
+Firmware/TonMOBIL_v1.2/TonMOBIL_function.ino
+Firmware/TonMOBIL_v1.2/TonMOBIL_loop.ino
+Firmware/TonMOBIL_v1.2/TonMOBIL_setup.ino
+Firmware/TonMOBIL_v1.2/TonMOBIL_v1.2.ino
+Firmware/TonMOBIL_v1.3/TonMOBIL_function.ino
+Firmware/TonMOBIL_v1.3/TonMOBIL_loop.ino
+Firmware/TonMOBIL_v1.3/TonMOBIL_setup.ino
+Firmware/TonMOBIL_v1.3/TonMOBIL_v1.3.ino
