--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Firmware/TonMOBIL_v1.3/TonMOBIL_loop.ino
 Firmware/TonMOBIL_v1.3/TonMOBIL_setup.ino
 Firmware/TonMOBIL_v1.3/TonMOBIL_v1.3.ino
 Ideen/Standardansge bevor der Titel gespielt wird - Software - TonUINO.url
+*.png
