--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,19 @@ Firmware/TonMOBIL_v1.3/TonMOBIL_setup.ino
 Firmware/TonMOBIL_v1.3/TonMOBIL_v1.3.ino
 Ideen/Standardansge bevor der Titel gespielt wird - Software - TonUINO.url
 *.png
+Ideen/Einschlaffunktion- Lautstärke ausfaden - Software - TonUINO.url
+Ideen/DFPlayer Mini v1.1.0 - Software - TonUINO.url
+Ideen/Frage- Zuletzt gespielte Karte als Shortcut - Softwarefeature - Software - TonUINO.url
+Ideen/Software für LED Animationen - Software - TonUINO.url
+KICAD/TonMOBIL/TonMOBILv1/fp-info-cache
+KICAD/TonMOBIL/TonMOBILv1/sym-lib-table
+KICAD/TonMOBIL/TonMOBILv1/TonMOBILv1-cache.lib
+KICAD/TonMOBIL/TonMOBILv1/TonMOBILv1-rescue.lib
+KICAD/TonMOBIL/TonMOBILv1/TonMOBILv1.kicad_pcb
+KICAD/TonMOBIL/TonMOBILv1/TonMOBILv1.pro
+KICAD/TonMOBIL/TonMOBILv1/TonMOBILv1.sch
+KICAD/TonMOBIL/TonMOBILv1/TonMOBILv1.sch
+KICAD/TonMOBIL/TonMOBILv1/TonMOBILv1.sch-bak
+KICAD/TonMOBIL/TonMOBILv1/TonMOBILv1.sch-bak
+KICAD/TonUINOv4.zip
+KICAD/TonUINOv4.zip
